# loudness_monitor

./: .gitignore  .gitmodules  CMakeLists.txt
loudmon/: loudmon.jucer
loudmon/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
loudmon/Source/common/: ui_updater.cpp  ui_updater.h
loudmon/Source/loudmon/: debug_output.cpp  debug_output.h  filter_ui.cpp  filter_ui.h  log_slider.cpp  log_slider.h  oscilloscope.h  plot.cpp  plot.h  utils.cpp  utils.h
loudmon/Source/synth/: synth.cpp  synth.h  waveform.cpp  waveform.h
